--- a/Improbability/Pages/Shared/_LoginPartial.cshtml
+++ b/Improbability/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Improbability.Models
+﻿@using Improbability.Models
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
