Add success message to AddRandomEvent page

--- a/Improbability/Areas/Identity/Pages/Account/Manage/ApiKey.cshtml
+++ b/Improbability/Areas/Identity/Pages/Account/Manage/ApiKey.cshtml
@@ -12,7 +12,7 @@
         <form id="api-key-form" method="post">
             <div class="form-group">
                 <label asp-for="ApiKey"></label>
-                <input asp-for="ApiKey" class="form-control" disabled />
+                <input asp-for="ApiKey" class="form-control" readonly />
             </div>
             <button id="update-api-key-button" type="submit" class="btn btn-primary">Change Api-key</button>
         </form>
