--- a/Improbability/Pages/Shared/_Layout.cshtml
+++ b/Improbability/Pages/Shared/_Layout.cshtml
@@ -23,8 +23,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            </li> *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RandomItemDiagrams">Diagrams</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AddRandomEvent">Add RandomEvent</a>
@@ -48,9 +51,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - Improbability - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+        <div class="container">&copy; 2021 - Improbability - <a asp-area="" asp-page="/Privacy">Privacy</a></div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
