--- a/Improbability/Pages/RandomItemDiagrams.cshtml
+++ b/Improbability/Pages/RandomItemDiagrams.cshtml
@@ -14,16 +14,20 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ApplicationUser.ApiKey" class="control-label"></label>
-                <input asp-for="ApplicationUser.ApiKey" class="form-control apiKey" value="5RE23H4JHQA2DVLVSEZ525UCRLWXUKGQ"/>
+                <input
+                    id="apiKey"
+                    asp-for="ApplicationUser.ApiKey"
+                    class="form-control"
+                    value="5RE23H4JHQA2DVLVSEZ525UCRLWXUKGQ"/>
                 <span asp-validation-for="ApplicationUser.ApiKey" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RandomEvent.RandomItemId" class="control-label"></label>
-                <input asp-for="RandomEvent.RandomItemId" class="form-control randomItemId" value="1"/>
+                <input id="randomItemId" asp-for="RandomEvent.RandomItemId" class="form-control" value="1"/>
                 <span asp-validation-for="RandomEvent.RandomItemId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="button" value="Show RandomEvents charts" class="btn btn-primary show-statistic"/>
+                <input id="show-statistic" type="button" value="Show RandomEvents charts" class="btn btn-primary"/>
             </div>
         </form>
         @Html.AntiForgeryToken()
@@ -34,6 +38,15 @@
 <div>Minimum: <span id="minimum"></span></div>
 <div>Maximum: <span id="maximum"></span></div>
 <div>Average: <span id="average"></span></div>
+<div>
+    Expected average:
+    <ul>
+        <li>With smallest possible result zero: <span id="expected-avg-start0"></span></li>
+        <li>With smallest possible result one: <span id="expected-avg-start1"></span></li>
+    </ul>
+</div>
+<div>Median: <span id="median"></span></div>
+<div>Standard deviation: <span id="standard-deviation"></span></div>
 
 <div>
     <a asp-page="Index">Back to Home</a>
