--- a/Improbability/Pages/Shared/_Layout.cshtml
+++ b/Improbability/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                             </li> *@
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/RandomItemDiagrams">Diagrams</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RandomItemDiagrams">RandomEvent
+                                Statistics</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AddRandomEvent">Add RandomEvent</a>
